refactor: MID4-126 PR 리뷰 반영 - 정적 팩토리, 커스텀 예외, 엔티티 연관관계 매핑